# CLIP-ReID

./: pyproject.toml
clipreid/: reidmodel.py
clipreid/model/: make_model.py
config/: defaults.py
model/: make_model.py
